1998-11-13  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (defun-maybe-cond): fixed problem in Emacs 18.

	* poe.el (defsubst): Moved from poe-18.el.

	* poe-18.el: Move macro `defsubst' to poe.el.


1998-11-13  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.10 was released.

1998-11-13  Tanaka Akira  <akr@jaist.ac.jp>

	* pccl.el (define-ccl-program): Adviced.

1998-11-12  Tanaka Akira  <akr@jaist.ac.jp>

	* pccl-om.el (ccl-cascading-read): New facility.

1998-11-10  Tanaka Akira  <akr@jaist.ac.jp>

	* EMU-ELS (emu-modules): Always install 'pccl.

	* broken.el: Use 19.28 style quasi-quote.

	* pccl.el: - require 'broken.
	- Does not require 'pccl-20 for XEmacs 20.
	(ccl-usable): New facility.

1998-11-10  Tanaka Akira  <akr@jaist.ac.jp>

	* README.en, README.ja, pccl-20.el: Note that pccl-20 is not
	for XEmacs 20.

1998-11-08  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe-18.el (eval-and-compile): Moved from poe.el.

	* poe.el: Move `eval-and-compile' to poe-18.el.

	* poe-xemacs.el (overlayp): New alias.
	(delete-overlay): New alias.


1998-11-07  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.9 was released.

1998-11-06  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (combine-after-change-calls): fixed.

1998-10-31  Mikio Nakajima    <minakaji@osaka.email.ne.jp>

	* poe.el (combine-after-change-calls): New macro.

1998-10-28  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (defun-maybe-cond): New macro.
	(next-command-event): Use `defun-maybe-cond'.
	(cancel-undo-boundary): Use `defun-maybe-cond'.

1998-10-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-om.el (char-after): Redefine to change `POS' to optional
	argument.


1998-10-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.8 was released.

	* README.ja, README.en (CVS): New section.

1998-10-27  Mikio Nakajima    <minakaji@osaka.email.ne.jp>

	* poem-om.el (char-before): Redefine to change `POS' to optional
	argument.
